--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Chicken Curry</h1>
+        <img src="../images/chickenimg.jpeg" alt="Finished Chicken Curry">
     </body>
 </html>
