Add Recipes and Description to chicken.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Recipes</title> 
     </head>
     <body>
-        <h1>Odin-recipes</h1>
+        <h1>Odin-Recipes</h1>
         <a href="./recipes/chicken.html">Chicken Recipe</a>
     </body>
 </html>
