--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -6,6 +6,38 @@
     </head>
     <body>
         <h1>Chicken Curry</h1>
-        <img src="../images/chickenimg.jpeg" alt="Finished Chicken Curry">
+        <img src="../images/chickenimg.jpeg" alt="Finished Chicken Curry" width ="500" height="500">
+        <br>
+        <br>
+        <h3>Description</h3>
+        <p>Chicken curry is a dish originating from the Indian subcontinent. It is common in the 
+            Indian subcontinent, Southeast Asia, Great Britain, and the Caribbean. A typical curry
+            from the Indian subcontinent consists of chicken stewed in an onion- and tomato- based 
+            sauce.
+        </p>
+        <br>
+        <br>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>3 tablespoons olive oil</li>
+            <li>1 small onion, chopped</li>
+            <li>2 cloves garlic, minced</li>
+            <li>3 tablespoons curry powder</li>
+            <li>1 teaspoon ground cinnamon</li>
+            <li>1 teaspoon paprika</li>
+            <li>1 bay leaf</li>
+            <li>salt to taste</li>
+            <li>2 skinless, boneless chicken breast halves - cut into bite-size pieces</li>
+            <li>1 tablespoon tomato paste</li>
+            <li>1 cup plain yogurt</li>
+            <li>¾ cup coconut milk</li>
+            <li>½ lemon, juiced</li>
+            <li>½ teaspoon cayenne pepper</li>
+        </ul>
+
+
+
+
     </body>
 </html>
+
