--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -35,6 +35,16 @@
             <li>½ teaspoon cayenne pepper</li>
         </ul>
 
+        <h3>Instructions</h3>
+        <ol>
+            <li>Heat olive oil in a skillet over medium heat. Saute onion until lightly browned. Stir in garlic, curry powder, 
+                cinnamon, paprika, bay leaf, ginger, sugar and salt. Continue stirring for 2 minutes. Add chicken pieces, tomato
+                 paste, yogurt, and coconut milk. Bring to a boil, reduce heat, and simmer for 20 to 25 minutes.
+            </li>
+            <li>Remove bay leaf, and stir in lemon juice and cayenne pepper. Simmer 5 more minutes.</li>
+            <li></li>
+        </ol>
+
 
 
 
