--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -42,8 +42,9 @@
                  paste, yogurt, and coconut milk. Bring to a boil, reduce heat, and simmer for 20 to 25 minutes.
             </li>
             <li>Remove bay leaf, and stir in lemon juice and cayenne pepper. Simmer 5 more minutes.</li>
-            <li></li>
+            
         </ol>
+        <a href="../index.html">Home Page</a>
 
 
 
