--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <style>
+            h1 {text-align: center;}
+            h3 {text-align: center;}
+            p {text-align: center;}
+        </style>
         <meta charset="UTF-8">
         <title>Chicken-Curry</title> 
     </head>
