Add font styles to headings of chicken.html

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="../css/styles.css">
         <style>
+            
             h1 {text-align: center;}
             h3 {text-align: center;}
+            h2 {text-align: center;}
             p {text-align: center;}
         </style>
         <meta charset="UTF-8">
         <title>Chicken-Curry</title> 
     </head>
     <body>
-        <h1>Chicken Curry</h1>
+        <h1 class="helvetica">Chicken Curry</h1>
         <img src="../images/chickenimg.jpeg" alt="Finished Chicken Curry" width ="500" height="500">
         <br>
         <br>
-        <h3>Description</h3>
+        <h2 class="helvetica">Description</h2>
         <p>Chicken curry is a dish originating from the Indian subcontinent. It is common in the 
             Indian subcontinent, Southeast Asia, Great Britain, and the Caribbean. A typical curry
             from the Indian subcontinent consists of chicken stewed in an onion- and tomato- based 
@@ -22,7 +25,7 @@
         </p>
         <br>
         <br>
-        <h3>Ingredients</h3>
+        <h2 class="helvetica">Ingredients</h2>
         <ul>
             <li>3 tablespoons olive oil</li>
             <li>1 small onion, chopped</li>
