Change fonts of Main contents of chicken.html

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
         <link rel="stylesheet" href="../css/styles.css">
         <style>
+            p,ul,ol{
+                     font-family: 'Montserrat';font-size: 22px;
+                    }
             
             h1 {text-align: center;}
             h3 {text-align: center;}
@@ -12,13 +16,13 @@
         <meta charset="UTF-8">
         <title>Chicken-Curry</title> 
     </head>
-    <body>
+    <body style="background-color:#e0e0e0ab">
         <h1 class="helvetica">Chicken Curry</h1>
         <img src="../images/chickenimg.jpeg" alt="Finished Chicken Curry" width ="500" height="500">
         <br>
         <br>
         <h2 class="helvetica">Description</h2>
-        <p>Chicken curry is a dish originating from the Indian subcontinent. It is common in the 
+        <p class="Montserrat">Chicken curry is a dish originating from the Indian subcontinent. It is common in the 
             Indian subcontinent, Southeast Asia, Great Britain, and the Caribbean. A typical curry
             from the Indian subcontinent consists of chicken stewed in an onion- and tomato- based 
             sauce.
