Center alligned contents of the page

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -30,7 +30,7 @@
         <br>
         <br>
         <h2 class="helvetica">Ingredients</h2>
-        <ul>
+        <ul class="Montserrat">
             <li>3 tablespoons olive oil</li>
             <li>1 small onion, chopped</li>
             <li>2 cloves garlic, minced</li>
@@ -48,7 +48,7 @@
         </ul>
 
         <h2 class="helvetica">Instructions</h2>
-        <ol>
+        <ol class="Montserrat">
             <li>Heat olive oil in a skillet over medium heat. Saute onion until lightly browned. Stir in garlic, curry powder, 
                 cinnamon, paprika, bay leaf, ginger, sugar and salt. Continue stirring for 2 minutes. Add chicken pieces, tomato
                  paste, yogurt, and coconut milk. Bring to a boil, reduce heat, and simmer for 20 to 25 minutes.
