--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -19,6 +19,8 @@
     <body style="background-color:#e0e0e0ab">
         <h1 class="helvetica">CHICKEN CURRY</h1>
         <img src="../images/chickenimg.png" alt="Finished Chicken Curry" width ="400" height="400" class="center">
+       
+    </div>
         <br>
         <br>
         <h2 class="helvetica">Description</h2>
